--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <div class="col-2">col</div>
                 <div class="col-5">col</div>
                 <div class="col-5">col</div>
-
             </div>
+            <div class="row"></div>
         </div>
         
     </body>
