--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
     <body class="debug">
         <div class="container">
             <div class="row">
-                <div class="col-1">1 col</div>
-                <div class="col-1">1 col</div>
-                <div class="col-1">1 col</div>
-                <div class="col-1">1 col</div>
-                <div class="col-1">1 col</div>
-                <div class="col-1">1 col</div>
-                <div class="col-1">1 col</div>
-                <div class="col-1">1 col</div>
-                <div class="col-1">1 col</div>
-                <div class="col-1">1 col</div>
-                <div class="col-1">1 col</div>
-                <div class="col-1">1 col</div>
+                <div class="col-xs-1">1 col</div>
+                <div class="col-xs-1">1 col</div>
+                <div class="col-xs-1">1 col</div col>
+                <div class="col-xs-1">1 col</div>
+                <div class="col-xs-1">1 col</div>
+                <div class="col-xs-1">1 col</div>
+                <div class="col-xs-1">1 col</div>
+                <div class="col-xs-1">1 col</div>
+                <div class="col-xs-1">1 col</div>
+                <div class="col-xs-1">1 col</div>
+                <div class="col-xs-1">1 col</div>
+                <div class="col-xs-1">1 col</div>
             </div>
             <div class="row">
-                <div class="col-2">col</div>
-                <div class="col-5">col</div>
-                <div class="col-5">col</div>
+                <div class="col-xs-2">col</div>
+                <div class="col-xs-5">col</div>
+                <div class="col-xs-5">col</div>
             </div>
             <div class="row"></div>
         </div>
