--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="row">
                 <div class="col-xs-1">1 col</div>
                 <div class="col-xs-1">1 col</div>
-                <div class="col-xs-1">1 col</div col>
+                <div class="col-xs-1">1 col</div>
                 <div class="col-xs-1">1 col</div>
                 <div class="col-xs-1">1 col</div>
                 <div class="col-xs-1">1 col</div>
@@ -30,7 +30,120 @@
                 <div class="col-xs-5">col</div>
                 <div class="col-xs-5">col</div>
             </div>
-            <div class="row"></div>
+            <div class="row">
+                <div class="col-xs-12">12 col</div>
+            </div>
+            <div class="row">
+                <div class="col-xs-8">8 col</div>
+                <div class="col-xs-2">2 col</div>
+                <div class="col-xs-2">2 col</div>
+            </div>
+            <div class="row">
+                <div class="col-xs-1">1 col</div>
+                <div class="col-xs-2">2 col</div>
+                <div class="col-xs-2">2 col</div>
+                <div class="col-xs-6">6 col</div>
+                <div class="col-xs-1">1 col</div>
+            </div>
+            <div class="row">
+                <div class="col-xs-6">
+                    <div class="row">
+                        <div class="back-green col-xs-2">Nested 2 col</div>
+                        <div class="back-green col-xs-2">Nested 2 col</div>
+                        <div class="back-green col-xs-8">Nested 8 col</div>
+                    </div>
+                </div>
+                <div class="col-xs-6">
+                    <div class="row space">
+                        <div class="back-green col-xs-6">Nested 6 col</div>
+                        <div class="back-green col-xs-6">Nested 6 col</div>
+                    </div>
+                </div>
+            </div>
+            <div class="row space">
+                <div class="col-xs-12"></div>
+            </div>
+            <div class="row">
+                <div class="col-xs-1"></div>
+                <div class="col-xs-11"></div>
+            </div>
+            <div class="row">
+                <div class="col-xs-2"></div>
+                <div class="col-xs-10"></div>
+            </div>
+            <div class="row">
+                <div class="col-xs-3"></div>
+                <div class="col-xs-9"></div>
+            </div>
+            <div class="row">
+                <div class="col-xs-4"></div>
+                <div class="col-xs-8"></div>
+            </div>
+            <div class="row">
+                <div class="col-xs-5"></div>
+                <div class="col-xs-7"></div>
+            </div>
+            <div class="row">
+                <div class="col-xs-6"></div>
+                <div class="col-xs-6"></div>
+            </div>
+
+            <!-- Offset -->
+
+            <h2>Offset</h2>
+            <div class="row">
+                <div class="col-xs-1 col-xs-offset-11"></div>
+            </div>
+            <div class="row">
+                <div class="col-xs-2 col-xs-offset-10"></div>
+            </div>
+            <div class="row">
+                <div class="col-xs-3 col-xs-offset-9"></div>
+            </div>
+            <div class="row">
+                <div class="col-xs-4 col-xs-offset-8"></div>
+            </div>
+            <div class="row">
+                <div class="col-xs-5 col-xs-offset-7"></div>
+            </div>
+            <div class="row">
+                <div class="col-xs-6 col-xs-offset-6"></div>
+            </div>
+            <div class="row">
+                <div class="col-xs-7 col-xs-offset-5"></div>
+            </div>
+            <div class="row">
+                <div class="col-xs-8 col-xs-offset-4"></div>
+            </div>
+            <div class="row">
+                <div class="col-xs-9 col-xs-offset-3"></div>
+            </div>
+            <div class="row">
+                <div class="col-xs-10 col-xs-offset-2"></div>
+            </div>
+            <div class="row">
+                <div class="col-xs-11 col-xs-offset-1"></div>
+            </div>
+
+            <!-- Nested -->
+
+            <h2>Nested</h2>
+            <div class="row">
+                <div class="col-xs-7">
+                    <div class="row">
+                        <div class="back-green col-xs-4"></div>
+                        <div class="back-green col-xs-4"></div>
+                        <div class="back-green col-xs-4"></div>
+                    </div>
+                </div>
+                <div class="col-xs-5">
+                    <div class="row">
+                        <div class="back-green col-xs-6"></div>
+                        <div class="back-green col-xs-6"></div>
+                    </div>
+                </div>
+            </div>
+
         </div>
         
     </body>
