--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
                 </div>
                 <div class="col-xs-6">
-                    <div class="row space">
+                    <div class="row">
                         <div class="back-green col-xs-6">Nested 6 col</div>
                         <div class="back-green col-xs-6">Nested 6 col</div>
                     </div>
